# i3-focused-window

./: Cargo.toml  README.md
src/: main.rs
