[package]
version = "0.1.0"
name = "i3-focused-window"
description = "Print out the geometry of the currently focused windows on i3 and sway."
readme = "README.md"

repository = "https://github.com/cauebs/i3-focused-window"
authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]
license = "GPL-3.0+"
edition = "2018"

[dependencies]
exitfailure = "0.5.1"
i3ipc = "0.9.0"
structopt = "0.2.14"
